trying to fix overflow issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body{
     grid-template-rows: min-content 100%;
     row-gap: 2rem;
     min-height: 100vh;
+    height: 100%;
 }
 
 .container{
